[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-gatekeeper"
version = "0.1.0"
description = "Enterprise-grade security firewalls and timeout evictions for LangGraph workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "D. Baker" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_gatekeeper"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v -s --import-mode=importlib"
testpaths = [
    "tests",
]
python_files = "test_*.py"
filterwarnings = [
    "ignore:The 'config' parameter should be typed as 'RunnableConfig':UserWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]
